2005-04-13  Raja R Harinath  <rharinath@novell.com>

	* test-363.cs: New test from #74528.

2005-04-11  Marek Safar <marek.safar@seznam.cz>

	* test-362.cs: #74565 test case.

2005-04-08  Raja R Harinath  <rharinath@novell.com>

	* test-361.cs, test-361-2.cs: New test from #74484.

2005-04-05  Raja R Harinath  <rharinath@novell.com>

	* mtest-8-dll.cs, mtest-8-exe.cs: New test from #73820.

	* test-360.cs: New test from #74041.

2005-04-01  Kamil Skalski  <nazgul@omega.pl>

	* test-359.cs: New test from #74309.

2005-03-30  Marek Safar <marek.safar@seznam.cz>

	* cond-attr.cs: Conditional attribute class test.

2005-03-16  Raja R Harinath  <rharinath@novell.com>

	* a-capture6.cs, a-nested.cs: Fix compilation.

2005-03-15  Marek Safar <marek.safar@seznam.cz>

	* a-capture{2,3,4}.cs: Fixed tests.

2005-03-10  Atsushi Enomoto  <atsushi@ximian.com>

	* xml-036.cs, xml-036-ref.xml, Makefile : added test for bug #73384.

2005-03-10  Raja R Harinath  <rharinath@novell.com>

	* mtest-7-exe.cs, mtest-7-dll.cs: New test from #73516.
	* Makefile (DISTFILES): Add test-353-2.cs.

2005-03-09  Raja R Harinath  <rharinath@novell.com>

	* test-357.cs: New test for partial classes.

2005-03-08  Marek Safar <marek.safar@seznam.cz>

	* test-355.cs, test-356.cs: New tests.

2005-03-07  Martin Baulig  <martin@ximian.com>

	* gen-134.cs, gen-135.cs, gen-136.cs, gen-137.cs, gen-138.cs,
	gen-139.cs, gen-140.cs: These were my very first test cases for
	Nullable Types.

2005-03-07  Martin Baulig  <martin@ximian.com>

	* gen-130.cs, gen-131.cs, gen-132.cs, gen-133.cs, gen-134.cs: New
	test cases for Nullable Types.  Thanks a lot to Peter Sestoft :-)

2005-03-04  Raja R Harinath  <rharinath@novell.com>

	* Makefile (TEST_HARNESS_EXTRAS): Add test-353-2.cs.
	* test-353.cs: Don't use ../ to refer to test-353-2.cs.

	* test-354.cs: New test from #73282.

2005-03-01  Marek Safar <marek.safar@seznam.cz>

	* test-352.cs: New test.
	
	* test-353.cs, test-353-2: Bug #73117
